--- a/package.json
+++ b/package.json
@@ -13,10 +13,15 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "add": "^2.0.6",
     "firebase": "^12.6.0",
+    "framer-motion": "^12.23.26",
     "lucide-react": "^0.555.0",
+    "o": "^2.3.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-hot-toast": "^2.6.0",
+    "yarn": "^1.22.22",
     "zod": "^4.1.13"
   },
   "devDependencies": {
