--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "gestor-turnos",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.2.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "node scripts/version-bump.js && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
